# stupid-rust

./: .editorconfig  README.md
crates/db/: Cargo.toml  build.rs
crates/db-client/: Cargo.toml  README.md
crates/db-server/: Cargo.toml  README.md
crates/db-server/src/: lib.rs
crates/db/config/: default.toml
crates/db/proto/: command.proto  record.proto
crates/db/src/: lib.rs
crates/db/src/config/: mod.rs
crates/db/src/v1/: mod.rs
crates/db/src/v1/error/: mod.rs
crates/db/src/v1/mem_tbl/: dashmap_store.rs  disk.rs  hashmap_store.rs  mod.rs  row.rs  store.rs
crates/db/src/v1/wal/: mod.rs
crates/shell/: Cargo.toml  README.md
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
