[package]
authors = ["tony b. <tonyb983@gmail.com>"]
description = "Writing a simple database (along with client and server) because im stupid"
edition = "2021"
license = "MPL-2.0"
name = "stupid-db"
repository = "github.com/tonyb983/stupid_rust"
version = "0.1.0"

[dependencies]
bytes = { version = "1.1.0", features = ["serde"] }
config = "0.12.0"
crc32fast = { version = "1.3.2", features = ["nightly"] }
dashmap = { version = "5.2.0", features = ["serde"] }
directories = "4.0.1"
fastrand = "1.7.0"
once_cell = "1.10.0"
prost = "0.9.0"
prost-types = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["macros", "formatting", "serde"] }
utils = { path = "../utils", package = "stupid-utils" }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.2.0"
